shopapp-website: project restart

--- a/app/custom.css
+++ b/app/custom.css
@@ -7,3 +7,10 @@ input::-webkit-inner-spin-button {
   width: 0px;
   background: none;  
 }
+
+/* @layer components {
+  .active {
+    color: red;
+    background-color: aliceblue;
+  }
+} */
