--- a/app/custom.css
+++ b/app/custom.css
@@ -14,3 +14,21 @@ input::-webkit-inner-spin-button {
     background-color: aliceblue;
   }
 } */
+
+#root::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+}
+
+#root::-webkit-scrollbar
+{
+	width: 12px;
+}
+
+#root::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #1E293B;
+}
